--- a/form.html
+++ b/form.html
@@ -172,7 +172,7 @@
 
             <!-- tabs -->
             <section class="tabs">
-                <ul class="nav nav-tabs2 col-xl-11">
+                <ul class="nav nav-tabs2">
                     <li class="nav-item col-4 col-xl-1">
                         <a class="nav-link active" href="#">대시보드
                         </a>
@@ -192,6 +192,61 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                     </li>
+                    <li class="nav-item col-4 col-xl-1">
+                        <a class="nav-link" href="#">UI Elements</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </li>
+                    <li class="nav-item col-4 col-xl-1">
+                        <a class="nav-link" href="#">UI Elements</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </li>
+                    <li class="nav-item col-4 col-xl-1">
+                        <a class="nav-link" href="#">UI Elements</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </li>
+                    <li class="nav-item col-4 col-xl-1">
+                        <a class="nav-link" href="#">UI Elements</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </li>
+                    <li class="nav-item col-4 col-xl-1">
+                        <a class="nav-link" href="#">UI Elements</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </li>
+                    <li class="nav-item col-4 col-xl-1">
+                        <a class="nav-link" href="#">UI Elements</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </li>
+                    <li class="nav-item col-4 col-xl-1">
+                        <a class="nav-link" href="#">UI Elements</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </li>
+                    <li class="nav-item col-4 col-xl-1">
+                        <a class="nav-link" href="#">UI Elements</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </li>
+                    <li class="nav-item col-4 col-xl-1">
+                        <a class="nav-link" href="#">UI Elements</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </li>
+
                     <!-- <li class="nav-item col-4 col-xl-1">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -200,7 +255,8 @@
                     </li> -->
                 </ul>
                 <div class="btn-set col-xl-1">
-                    dfgsd
+                    <button><i class='xi xi-angle-left-min'></i>이전</button>
+                    <button><i class='xi xi-angle-right-min'></i>다음</button>
                 </div>
             </section>
             <!--// tabs --->
