--- a/form.html
+++ b/form.html
@@ -172,95 +172,109 @@
 
             <!-- tabs -->
             <section class="tabs">
-                <ul class="nav nav-tabs2">
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link active" href="#">대시보드
-                        </a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">App</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
-                    <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link" href="#">UI Elements</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                    </li>
 
-                    <!-- <li class="nav-item col-4 col-xl-1">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <div class="btn-set col-3 col-xl-1">
+                        <button class="slick-left">
+                            <i class='xi xi-angle-left-min'></i>이전</button>
+                        <button class="slick-right">
+                            <i class='xi xi-angle-right-min'></i>다음</button>
+                    </div>
+    
+                    <div class="slick-tabs">
+                        <div class="item on">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
-                    </li> -->
-                </ul>
-                <div class="btn-set col-xl-1">
-                    <button><i class='xi xi-angle-left-min'></i>이전</button>
-                    <button><i class='xi xi-angle-right-min'></i>다음</button>
-                </div>
-            </section>
-            <!--// tabs --->
-
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="item">
+                            <a href="#">대시보드</a>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+    
+                    </div>
+                </section>
+                <!--// tabs --->
 
 
             <section class="view">
