--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
 
     </head>
 
-    <body class="cmsMain">
+    <body class="cmsMain dashboard">
         <!-- S:skip_navi -->
         <div class="skip_navi">
             <a class="sr-only sr-only-focusable" href="#header">메뉴 바로가기</a>
@@ -183,7 +183,12 @@
                         <i class='xi xi-angle-right-min'></i>다음</button>
                 </div>
 
-                <div class="slick-tabs">
+                <div class="fix-tabs item col-3 col-xl-1">
+                    <a href="#">
+                        <i class='xi xi-dashboard-o'></i>대시보드</a>
+                </div>
+
+                <div class="slick-tabs col-9 col-xl-11">
                     <div class="item on">
                         <a href="#">대시보드</a>
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
