--- a/form.html
+++ b/form.html
@@ -4,8 +4,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>infoCMS</title>
+
         <link rel="stylesheet" type="text/css" href="source/css/style.css"/>
         <link rel="stylesheet" type="text/css" href="source/css/xeicon.css"/>
 
@@ -14,6 +17,7 @@
         <script src="source/js/jquery-3.3.1.slim.min.js"></script>
         <script src="source/js/popper.min.js"></script>
         <script src="source/js/bootstrap.min.js"></script>
+        <script src="source/js/slick.min.js"></script>
 
         <script src="source/js/common.js"></script>
 
@@ -160,7 +164,6 @@
             </nav>
             <!-- E:main_menu -->
 
-
             <!-- S:footer -->
             <p class="copyright">
                 © INFOMIND
@@ -173,110 +176,113 @@
             <!-- tabs -->
             <section class="tabs">
 
-                    <div class="btn-set col-3 col-xl-1">
-                        <button class="slick-left">
-                            <i class='xi xi-angle-left-min'></i>이전</button>
-                        <button class="slick-right">
-                            <i class='xi xi-angle-right-min'></i>다음</button>
-                    </div>
-    
-                    <div class="slick-tabs">
-                        <div class="item on">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="item">
-                            <a href="#">대시보드</a>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-    
-                    </div>
-                </section>
-                <!--// tabs --->
+                <div class="btn-set col-3 col-xl-1">
+                    <button class="slick-left">
+                        <i class='xi xi-angle-left-min'></i>이전</button>
+                    <button class="slick-right">
+                        <i class='xi xi-angle-right-min'></i>다음</button>
+                </div>
 
+                <div class="fix-tabs item col-3 col-xl-1">
+                    <a href="#">
+                        <i class='xi xi-dashboard-o'></i>대시보드</a>
+                </div>
 
+                <div class="slick-tabs col-9 col-xl-11">
+                    <div class="item on">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="item">
+                        <a href="#">대시보드</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                </div>
+            </section>
+            <!--// tabs --->
             <section class="view">
 
                 <h2 class="sTitle">
